--- a/css/page.css
+++ b/css/page.css
@@ -1,16 +1,25 @@
 *{box-sizing:border-box;}
-body{margin:0;padding:0;}
+body{margin:0;padding:0;background:#f6f6f6;}
 h1{text-align:center;}
 img{width:100%;border:1px solid #222;}
-.ct-page{margin-top:20px;text-align:center;}
-.btn{cursor:pointer;width:100px;height:30px;background:red;
-    color: #fff;outline:none;border:none;}
-.btn:hover{background:darkred;}
+.ct-page{margin-top:20px;display:flex;justify-content:center;}
+.ct-page .btn{margin:3px;}
 
 .listview{list-style:none;margin:0;padding:0;border-top:1px solid #e4e4e4;}
 .ci{margin:15px 0;border-bottom:1px solid #e4e4e4;}
 .ci-user{font-size:0.8em;color:#777;}
 .ci-body{line-height:25px;padding:15px;}
+
+.btn{cursor:pointer;width:100px;height:30px;background:red;
+    color: #fff;outline:none;border:none;}
+.btn:hover{background:darkred;}
+a.btn{display: inline-block;text-align:center;line-height:30px;}
+.btn-sm{width:50px;}
+
+a{color:#222;text-decoration:none;}
+a:hover{text-decoration:underline;}
+ul{margin:0;padding:0;}
+li{list-style-position:inside;}
 
 @media screen and (min-width: 800px){
     .content{width:700px;margin:50px auto;}
