--- a/css/page.css
+++ b/css/page.css
@@ -1,36 +1,57 @@
 *{box-sizing:border-box;}
 body{margin:0;padding:0;background:#f6f6f6;}
-h1{text-align:center;}
-img{width:100%;border:1px solid #222;}
-.ct-page{margin-top:20px;display:flex;justify-content:center;}
-.ct-page .btn{margin:3px;}
-
-.listview{list-style:none;margin:0;padding:0;border-top:1px solid #e4e4e4;}
-.ci{margin:15px 0;border-bottom:1px solid #e4e4e4;}
-.ci-user{font-size:0.8em;color:#777;}
-.ci-body{line-height:25px;padding:15px;}
-
-.btn{cursor:pointer;width:100px;height:30px;background:red;
-    color: #fff;outline:none;border:none;}
-.btn:hover{background:darkred;}
-a.btn{display: inline-block;text-align:center;line-height:30px;}
-.btn-sm{width:50px;}
-
+h1{text-align:center;font-size:1.2em;}
+h1,h2,h3,h4,h5{margin:0 0 10px 0;}
 a{color:#222;text-decoration:none;}
 a:hover{text-decoration:underline;}
 ul{margin:0;padding:0;}
 li{list-style-position:inside;}
+img{width:100%;border:1px solid #222;}
+textarea{resize:none;width:100%;height:150px;word-break: break-all;
+    padding:10px;border:1px solid #cccccc;outline:none;}
 
-@media screen and (min-width: 800px){
-    .content{width:700px;margin:50px auto;}
-    textarea{resize:none;width:100%;height:150px;border:1px solid #cccccc;word-break: break-all;}
+.ct-page{margin-top:20px;display:flex;justify-content:center;}
+.ct-page .btn{margin:3px;}
+
+.cm{list-style:none;margin:0;padding:0;border-top:1px solid #e4e4e4;}
+.cm .ci{margin:15px 0;border-bottom:1px solid #e4e4e4;}
+.cm .ci .ci-user{font-size:0.8em;color:#777;}
+.cm .ci .ci-body{line-height:25px;padding:15px;}
+
+.btn{cursor:pointer;width:100px;height:30px;background:red;
+    color: #fff;outline:none;border:none;}
+.btn.btn-sm{width:50px;}
+
+.btn:hover{background:darkred;}
+a.btn{display: inline-block;text-align:center;line-height:30px;}
+
+.chapter-list ul{display:flex;flex-wrap:wrap;}
+.chapter-list li{width:30%;margin:3px 0;}
+
+@media screen and (min-width: 1000px){
+    .content{width:740px;position:relative;left:50%;margin-left:-500px;}
+    .rBar{width:250px;position:absolute;left:50%;top:0;margin-left:250px;}
+    .sec{border:1px solid #323232;padding:10px;margin-top:10px;}
+
+    .s3 .s3-row{display:flex;padding: 20px 0;border-bottom:1px dashed #ccc;}
+    .s3 .s3-row:first-of-type{border-top:1px dashed #ccc;}
+    .s3 .s3-col{width:50%;}
+    .s3 .s3-col img{width:133px;height:170px;float:left}
+    .s3 .s3-col .info{margin-left:135px;padding:0 5px;margin-right:10px;}
 }
 
-@media screen and (max-width: 800px){
-    h1{font-size:1.2em;}
+@media screen and (max-width: 1000px){
+    .btn.btn-block{width:100%;}
     .content{width:100%;padding:10px;}
-    textarea{resize:none;width:100%;height:150px;word-break: break-all;
-        padding:10px;border:1px solid #cccccc;outline:none;}
-    .btn-block{width:100%;}
+    .rBar{width:100%;padding:10px;}
+    .sec{border-top: 1px solid #323232;padding:10px;margin-top:10px;}
+    .chapter-list li{width:50%;}
+
+    .s3 .s3-row{padding:10px 0;border-bottom:1px dashed #ccc;}
+    .s3 .s3-row:first-of-type{border-top:1px dashed #ccc;}
+    .s3 .s3-col{width:100%;display:flex;padding:10px 0;}
+    .s3 .s3-col img{width:133px;height:170px;flex-shrink:0;}
+    .s3 .s3-col .info{padding:0 5px;margin-right:10px;}
+
 }
 
