--- a/video/web/videojs/video-js-custom.css
+++ b/video/web/videojs/video-js-custom.css
@@ -4,3 +4,36 @@
   margin-top: -0.75em;
   margin-left: -1.5em;
 }
+.video-js .vjs-remaining-time{display:none;}
+.video-js .vjs-time-divider{
+  min-width: 0;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+}
+.barg-div{
+  position:absolute;
+  overflow:hidden;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  pointer-events:none;
+  background-color:transparent;
+  padding-top:20px;
+}
+.barg-div>.path{
+  position:relative;
+  margin-left:100%;
+  color:yellow;
+  height:24px;
+  line-height:24px;
+  font-size:16px;
+  letter-spacing:1px;
+}
+.barg-div>.path>span{
+  position:absolute;
+  top:0;
+  left:0;
+  min-width:260px;
+}
