--- a/common/common.css
+++ b/common/common.css
@@ -15,10 +15,11 @@ a{text-decoration:none;}
 input[type=text]{border-color:#0F7884;border-style:solid;border-width:1px;outline:none;}
 input[type=checkbox]{vertical-align:middle;cursor:pointer;}
 
-.btn1{border: 1px solid #c5abc0;display: inline-block;padding: 2px 10px;cursor: pointer;background: #A6CBE7;}
-.btn1:not([disabled]):hover{border:1px solid #aba0a9;box-shadow: 0 0 1px #633359;text-shadow: 0 0 1px #c5abc0;}
+.btn{outline:none;display:inline-block;cursor:pointer;}
+.btn.btn1{border: 1px solid #c5abc0;padding: 2px 10px;background: #fff;}
+.btn.btn1:not([disabled]):hover{border:1px solid #398bfc;}
+.btn.btn2{border:none;padding: 2px 10px;background:#398bfc;color:#fff;}
+.btn.btn2:not([disabled]):hover{background:#0b65e2;}
+.btn.btn-lg{padding:5px 20px;}
 
-.btn2{border:1px solid #c5abc0;display:inline-block;padding: 2px 10px;cursor: pointer;}
-
-.btn-lg{padding:5px 20px;}
 .err{color:red;}
