--- a/video/web/css/page.css
+++ b/video/web/css/page.css
@@ -16,15 +16,14 @@
 .vpre>img{width:100%;height:100%;border: 1px solid #e3e3e3;}
 .vpre>.label{
     position: absolute;
-    bottom: 5px;
-    left: 5px;
+    bottom: 0;
+    left:0;
     z-index: 1000;
     font-size: 12px;
     background: #333;
     color:#ddd;
     padding: 3px 5px;
     opacity: 0.8;
-    border-radius:3px;
 }
 
 
