--- a/common/common.css
+++ b/common/common.css
@@ -1,8 +1,9 @@
+*{box-sizing:border-box;}
 body{
     margin:0;
     padding:0;
     background-color:#F7F6F2;
-    font-family:"Tahoma";
+    font-family: "Tahoma";
     font-size: 14px;
 }
 .unsel{
@@ -12,8 +13,9 @@ body{
     user-select: none;
 }
 a{text-decoration:none;}
-input[type=text]{border-color:#0F7884;border-style:solid;border-width:1px;outline:none;}
+input[type=text]{border-color:#0F7884;border-style:solid;border-width:1px;outline:none;padding:0 10px;}
 input[type=checkbox]{vertical-align:middle;cursor:pointer;}
+ul{margin:0;padding:0;}
 
 .btn{outline:none;display:inline-block;cursor:pointer;}
 .btn.btn1{border: 1px solid #c5abc0;padding: 2px 10px;background: #fff;}
@@ -23,3 +25,19 @@ input[type=checkbox]{vertical-align:middle;cursor:pointer;}
 .btn.btn-lg{padding:5px 20px;}
 
 .err{color:red;}
+
+/*page global style*/
+.page{width:80%;margin:20px auto;background:#fff;border:1px solid #ccc;}
+.page.col2{display:flex;min-width:1020px;max-width:1050px;}
+.page.col2>.left{flex-grow:1;flex-shrink:1;min-width: 0;}
+.page.col2>.right{flex-shrink: 0;border-left:1px solid #ccc;width:220px;}
+
+.sec{padding:20px;border-bottom:1px solid #ccc;}
+
+.pane{padding:10px;border-bottom: 1px solid #ccc;}
+.pane>h3{line-height:20px;padding:3px 5px;margin:0 0 3px 0;font-size:14px;color:#6f6f6f;}
+.pane>.item-v{margin:10px 0;width:185px;height:100px;}
+.pane>.item-a{line-height:26px;}
+.pane>.item-a:before{content:"»";}
+.pane>.item-img{}
+.pane>.item-img>img{width:200px;}
