--- a/manhua/web/css/content.css
+++ b/manhua/web/css/content.css
@@ -1,18 +1,20 @@
-.btn{width:100px;height:30px;background:red;color:#fff;border:none;}
+.btn{padding:0 15px;height:30px;background:red;color:#fff;border:none;}
 .btn:hover{background:darkred;}
-.btn.btn-sm{width:50px;}
+.btn.btn-lg{min-width:100px;}
+.btn.btn-sm{min-width:50px;}
 a.btn{text-align:center;line-height:30px;}
-
-.sec h3{padding:0 0 10px 0;margin:0;}
 
 .m-div img{width:100%;border:1px solid #222;}
 .m-div .ct-page{display:flex;justify-content:center;}
 .m-div .ct-page .btn{margin:3px;}
 
-.sm-div textarea{resize:none;width:100%;height:150px;word-break: break-all;padding:10px;border:1px solid #cccccc;outline:none;}
+.sm-div textarea{resize:vertical;width:100%;height:150px;word-break: break-all;padding:10px;border:1px solid #cccccc;outline:none;}
 
 .cm-div .cm{list-style:none;margin:0;padding:0;border-top:1px solid #e4e4e4;}
-.cm-div .cm-ci{margin:15px 0;border-bottom:1px solid #e4e4e4;}
+.cm-div .cm-ci{padding:10px 0;border-bottom:1px solid #e4e4e4;display:flex;}
+.cm-div .cm-ci .ci_l{width:70px;flex-shrink:0;text-align: center;}
+.cm-div .ci_l img{width:64px;height:64px;border:1px solid #e4e4e4;border-radius:50%;}
+.cm-div .cm-ci .ci_r{flex-grow:1;flex-shrink:1;min-width:0;margin-left:10px;}
 .cm-div .ci-user{font-size:0.8em;color:#777;}
-.cm-div .ci-body{line-height:25px;padding:15px;}
+.cm-div .ci-body{line-height:25px;padding:10px 0;}
 
