--- a/video/web/css/page.css
+++ b/video/web/css/page.css
@@ -16,8 +16,8 @@
 .vpre>img{width:100%;height:100%;border: 1px solid #e3e3e3;}
 .vpre>.label{
     position: absolute;
-    bottom: 0;
-    left:0;
+    bottom: 1px;
+    left:1px;
     z-index: 1000;
     font-size: 12px;
     background: #333;
