--- a/manhua/web/css/content.css
+++ b/manhua/web/css/content.css
@@ -4,9 +4,11 @@
 .btn.btn-sm{min-width:50px;}
 a.btn{text-align:center;line-height:30px;}
 
-.m-div img{width:100%;border:1px solid #222;}
+.m-div img{width:100%;height:1270px;border:1px solid #222;}
 .m-div .ct-page{display:flex;justify-content:center;}
 .m-div .ct-page .btn{margin:3px;}
+.m-div .ct-page .btn[disabled]{background:gray;}
+.m-div .ct-page select{margin: 3px;min-width: 60px;}
 
 .sm-div textarea{resize:vertical;width:100%;height:150px;word-break: break-all;padding:10px;border:1px solid #cccccc;outline:none;}
 
@@ -17,4 +19,6 @@ a.btn{text-align:center;line-height:30px;}
 .cm-div .cm-ci .ci_r{flex-grow:1;flex-shrink:1;min-width:0;margin-left:10px;}
 .cm-div .ci-user{font-size:0.8em;color:#777;}
 .cm-div .ci-body{line-height:25px;padding:10px 0;}
+
+#mh_buffer{display:none;}
 
