--- a/manhua/web/css/content.css
+++ b/manhua/web/css/content.css
@@ -1,10 +1,12 @@
+.sec h3{padding:0 0 10px 0;margin:0;}
+
 .btn{padding:0 15px;height:30px;background:red;color:#fff;border:none;}
 .btn:hover{background:darkred;}
 .btn.btn-lg{min-width:100px;}
 .btn.btn-sm{min-width:50px;}
 a.btn{text-align:center;line-height:30px;}
 
-.m-div img{width:100%;height:1270px;border:1px solid #222;}
+.m-div img{width:100%;border:1px solid #222;border-radius:10px;}
 .m-div .ct-page{display:flex;justify-content:center;}
 .m-div .ct-page .btn{margin:3px;}
 .m-div .ct-page .btn[disabled]{background:gray;}
