--- a/common/common.css
+++ b/common/common.css
@@ -2,9 +2,9 @@
 body{
     margin:0;
     padding:0;
-    background-color:#F7F6F2;
     font-family: "Tahoma";
     font-size: 14px;
+    background:url(img/pattern.gif);
 }
 .unsel{
     -webkit-user-select: none;
@@ -13,30 +13,30 @@ body{
     user-select: none;
 }
 a{text-decoration:none;}
-input[type=text],input[type=password]{border-color:#0F7884;border-style:solid;border-width:1px;outline:none;padding:0 10px;}
+input[type=text],input[type=password]{border-style:solid;border-width:1px;outline:none;padding:0 10px;}
 input[type=checkbox]{vertical-align:middle;cursor:pointer;}
 ul{margin:0;padding:0;}
 
-.btn{outline:none;display:inline-block;cursor:pointer;}
-.btn.btn1{border: 1px solid #c5abc0;padding: 2px 10px;background: #fff;}
+.btn{outline:none;display:inline-block;cursor:pointer;font-weight:bold;color:#000;}
+.btn.btn1{border: 1px solid #c5abc0;padding: 2px 10px;}
 .btn.btn1:not([disabled]):hover{border:1px solid #398bfc;}
-.btn.btn2{border:none;padding: 2px 10px;background:#398bfc;color:#fff;}
-.btn.btn2:not([disabled]):hover{background:#0b65e2;}
+.btn.btn2{border:none;padding: 2px 10px;background:linear-gradient(to bottom,#f90,#c60);}
+.btn.btn2:not([disabled]):hover{background: linear-gradient(to bottom,#c60,#f90);}
 .btn.btn-lg{padding:5px 20px;}
 
 .err{color:red;}
 
 /*page global style*/
-.page{width:80%;margin:20px auto;background:#fff;border:1px solid #ccc;}
-.page.col2{display:flex;min-width:1020px;max-width:1050px;}
+.page{width:1070px;margin:20px auto;background:#272727;border-radius:5px;}
+.page.col2{display:flex;}
 .page.col2>.left{flex-grow:1;flex-shrink:1;min-width: 0;}
-.page.col2>.right{flex-shrink: 0;border-left:1px solid #ccc;width:220px;}
+.page.col2>.right{flex-shrink: 0;width:230px;}
 
-.sec{padding:20px;border-bottom:1px solid #ccc;}
+.sec{padding:20px;}
 
-.pane{padding:10px;border-bottom: 1px solid #ccc;}
+.pane{padding:10px;margin:10px 10px 10px 0;}
 .pane>h3{line-height:20px;padding:3px 5px;margin:0 0 3px 0;font-size:14px;color:#6f6f6f;}
-.pane>.item-v{margin:10px 0;width:185px;height:100px;}
+.pane>.item-v{margin:10px 0;width:200px;height:110px;}
 .pane>.item-a{line-height:26px;}
 .pane>.item-a:before{content:"»";}
 .pane>.item-img{}
