--- a/video/web/css/page.css
+++ b/video/web/css/page.css
@@ -13,17 +13,18 @@
 }
 .vpre:hover:before{opacity:1;}
 .vpre:hover{cursor:pointer;}
-.vpre>img{width:100%;height:100%;border: 1px solid #e3e3e3;}
+.vpre>img{width:100%;height:100%;border:1px solid #222;border-radius:5px;}
 .vpre>.label{
     position: absolute;
     bottom: 1px;
     left:1px;
     z-index: 1000;
     font-size: 12px;
-    background: #333;
+    background: #222;
     color:#ddd;
     padding: 3px 5px;
     opacity: 0.8;
+    border-radius:0 5px 0 0;
 }
 
 
