--- a/video/web/css/play.css
+++ b/video/web/css/play.css
@@ -1,51 +1,77 @@
 .v-div{position:relative !important;height:460px;border-bottom:none !important;}
 .video-js{width:100% !important;height:100% !important;}
-video{object-fit:fill;}
 
-.bg-div{line-height: 30px;border-bottom: 1px solid #ccc;padding: 0 20px 20px 20px;margin-top: -10px;display:flex;}
+input[type=text]{border-radius:5px 0 0 5px;background: linear-gradient(to bottom,#fff, #ddd);}
+
+.bg-div{line-height: 30px;padding: 0 20px 20px 20px;margin-top: -10px;display:flex;}
 .bg-div .bg-toggle{margin-right:10px;height:30px;}
 .bg-div .input-group{display:inline-flex;height:30px;flex-grow:1;}
 .bg-div input[type=text]{border-color:#A6CBE7;border-right:none;flex-grow:1;}
+.bg-div .input-group .btn{border-radius:0 3px 3px 0;}
 
-.sm-div{}
-.sm-div textarea{outline:none;resize:vertical;width:100%;min-height:100px;box-sizing: border-box;margin-bottom:5px;padding:10px;}
+.info-div{border-top:2px solid #222;border-bottom:2px solid #222;}
+.info-div .row{height:30px;display:flex;}
+.info-div .row>.right{flex-grow:1;display:flex;justify-content:flex-end;}
+.info-div .row>.right>a{line-height:26px;border-left:1px solid #222;}
+.info-div .row>.right>a:first-child{border-left:none !important;border-radius:3px 0 0 3px;}
+.info-div .row>.right>a:last-child{border-radius:0 3px 3px 0;}
+.info-div .row>span{font-size:14px;line-height:30px;color:#a2a2a2;padding-left:10px;}
+.info-div .vote-wrap{width:160px;height:30px;line-height:30px;border-radius:3px;background:linear-gradient(to bottom,#fff,#ddd);display:inline-flex;}
+.info-div .vote-wrap .vote-btn{width:34px;height:30px;}
+.info-div .vote-wrap .vote-btn:hover{background-color:#ddd;}
+.info-div .vote-btn.up{border-radius:3px 0 0 3px;background-image:url(../img/btn-vote.png);}
+.info-div .vote-btn.down{border-radius:0 3px 3px 0;background-image:url(../img/btn-vote.png);background-position: -34px 0;}
+.info-div .vote-show{flex-grow:1;border-left: 1px solid #222;border-right: 1px solid #222;}
+.info-div .vote-show .stext{height: 21px;line-height: 21px;text-align: center;font-size: 12px;color: #2e2e2e;font-weight: bold;}
+.info-div .vote-show .slider-wrap{width: 90%;margin: 1px auto;height: 3px;background: #ccc;}
+.info-div .slider-wrap .up{height:100%;background:#f90;}
+
+.sm-div{border-top:2px solid #222;border-bottom:2px solid #222;}
+.sm-div .btn{border-radius:3px;}
+.sm-div textarea{outline:none;resize:none;width:100%;min-height:100px;box-sizing:
+        border-box;margin-bottom:5px;padding:10px;background:#222;border:none;border-radius:5px;color:#ddd;}
 
 .cm-div{}
-.cm-div .li{display:flex;border:1px solid #e3e3e3;border-bottom:none;}
-.cm-div .li:nth-last-child(2){border-bottom:1px solid #e3e3e3;}
-.cm-div .li_l{width:130px;border-right:1px solid #e3e3e3;text-align:center;padding:10px 0;flex-shrink:0;}
-.cm-div .head{width:80px;height:80px;border:1px solid #41c7db;}
+.cm-div a{color:#ddd !important;}
+.cm-div .li{display:flex;border:2px solid #1a1a1a;border-bottom:none;background:#222;color:#ddd;}
+.cm-div .li:first-child{border-radius:10px 10px 0 0;}
+.cm-div .li:nth-last-child(2){border-radius:0 0 10px 10px;}
+.cm-div .li:nth-last-child(2){border:2px solid #1a1a1a;}
+.cm-div .li_l{width:130px;border-right:2px solid #1a1a1a;text-align:center;padding:10px 0;flex-shrink:0;}
+.cm-div .head{width:80px;height:80px;border:1px solid #41c7db;border-radius: 10px;}
 .cm-div .nick{font-size: 14px;line-height: 26px;text-overflow:ellipsis;color: darkgoldenrod;font-weight:bold;}
-.cm-div .li_r{flex-grow:1;padding:20px;}
-.cm-div .r_c{min-height:180px;}
+.cm-div .li_r{flex-grow:1;padding:20px 20px 0 20px;}
+.cm-div .r_c{min-height:69px;}
 .cm-div .r_b{line-height: 20px;text-align: right;padding:10px 20px;}
 .cm-div .r_b>span{margin-left:3px;color:gray;}
 
-.cm-div .r_re{border: 1px solid #e3e3e3;background:#FFFAFA;display:none;}
+.cm-div .r_re{border:none;background:#333;display:none;margin-bottom:20px;}
 .cm-div .r_re.hide{display:block !important;}
-.cm-div .re_li{border-bottom:1px solid #e3e3e3;min-height:60px;display:flex;}
+.cm-div .re_li{border-bottom:1px solid #222;min-height:60px;display:flex;}
 .cm-div .re_li_l{flex-shrink:0;text-align:center;padding:10px;}
-.cm-div .re_li_l img{width:48px;height:48px;border:1px solid #e3e3e3;}
+.cm-div .re_li_l img{width:48px;height:48px;border:1px solid #e3e3e3;border-radius:5px;}
 .cm-div .re_li_r{flex-grow:1;padding:10px;}
 .cm-div .re_li_r_c{}
 .cm-div .re_li_r_c .nick:after{content:"：";}
 .cm-div .re_li_r_b{line-height: 20px;text-align:right;color:gray;}
 .cm-div .re_ctrl{padding:10px;}
 .cm-div .re_sd{display:flex;height:30px;}
-.cm-div .re_sd input{flex-grow:1;}
-.cm-div .re_sd button{flex-shrink:0;width:70px;}
+.cm-div .re_sd input{flex-grow:1;border:none;}
+.cm-div .re_sd button{flex-shrink:0;width:70px;border-radius: 0 3px 3px 0;}
 
 .cm-div .li-page{margin-top:10px;text-align:right;}
-.cm-div .li-page a{
-    display: inline-block;
-    padding: 5px 9px;
-    font-size: 12px;
-    background: #fff;
-    color: #666;
-    border: 1px solid #e6e6e6;
-}
+.cm-div .li-page a{display: inline-block;padding: 5px 9px;font-size: 12px;background: #222;border-radius: 3px;}
 .cm-div .li-page a:hover{color: #3e89fa;border: 1px solid #3e89fa;}
 .cm-div .li-page a.active{border:none;}
 .cm-div .li-page a.disabled{border:none;}
 
 .label1{background: #FF7F42;color:#fff !important;padding:0 5px;border-radius: 5px;}
+
+.pane{background: #222;}
+
+.ad-div{display:flex;padding:10px 17px !important;}
+.ad-div a{border:1px solid #222;}
+.ad-div img{background:#000;display:block;}
+
+.ad-pane{}
+.ad-pane img{display: block;background: #000;}
