--- a/video/web/css/play.css
+++ b/video/web/css/play.css
@@ -27,8 +27,8 @@ input[type=text]{border-radius:5px 0 0 5px;background: linear-gradient(to bottom
 .info-div .vote-show .stext{height: 21px;line-height: 21px;text-align: center;font-size: 12px;color: #2e2e2e;font-weight: bold;}
 .info-div .vote-show .slider-wrap{width: 90%;margin: 1px auto;height: 3px;background: #ccc;}
 .info-div .slider-wrap .up{height:100%;background:#f90;}
-.info-div .popup{border:2px solid #111;margin-top: 10px;border-radius: 5px;padding: 15px;font-size:13px;color:#ddd;}
-.info-div .popup .label{line-height:20px;padding-bottom: 3px;text-indent:3px;}
+.info-div .popup{border:2px solid #111;margin-top: 10px;border-radius: 5px;padding: 15px;font-size:13px;color:#ddd;display:none;}
+.info-div .popup .label{line-height:20px;padding-bottom: 3px;text-indent:3px;font-weight:bold;color:gray;}
 .info-div .popup .sep{height:10px;}
 .info-div .popup input[type=text]{width:100%;padding:5px;background:transparent;color: #ddd;border:2px solid #3a3a3a;border-radius:5px;}
 .info-div .popup.share .pprow span{display:inline-block;width:20px;text-align:center;}
