--- a/user/page.css
+++ b/user/page.css
@@ -2,7 +2,7 @@ body{font-size:14px;}
 .page{width:96% !important;min-width:1000px;}
 label{user-select:none;}
 
-.sec>h3{margin:0;font-size:14px;color:#222;background:#999;padding:0 8px;line-height:22px;}
+.sec>h3{margin:0;font-size:14px;padding:0 8px;line-height:22px;border-bottom: 2px solid #222;color:gray;}
 .sec>.info{padding:10px;}
 .login-sec a{color:#ddd;text-decoration:underline !important;}
 
