--- a/video/web/css/index.css
+++ b/video/web/css/index.css
@@ -6,10 +6,10 @@
 .page.col2>.right{margin-left:20px;width:200px;border:1px solid #cfcfcf;}
 
 .sec{padding:0 10px !important;}
-.sec .head{height:30px;line-height:30px;font-size:18px;padding:0 5px;margin:0 10px -10px 10px;
+.sec .head{height:30px;line-height:30px;font-size:18px;margin:0 10px -10px 10px;
     font-family:Arial,Helvetica,sans-serif;border-radius:5px;color:#f90;}
-.sec .row{display:flex;margin:20px 0;justify-content:center;}
-.sec .row .col{width:200px;margin:0 3px;padding:7px;background:#333;border-radius:5px;}
+.sec .row{display:flex;margin:20px 0;}
+.sec .row .col{width:200px;margin:0 5px;padding:7px;background:#333;border-radius:5px;}
 .sec .row .col:hover{background:#222;cursor:pointer;}
 .sec .col .vpre{height:130px;}
 .sec .col .vpre .col-img{width:100%;height:100%;background-size:100% 100% !important;}
@@ -33,4 +33,5 @@
     font-weight:bold;
 }
 .page-ctrl>a:hover{background: linear-gradient(to bottom,#999,#ddd);}
-.page-ctrl>a[disabled]{background: linear-gradient(to bottom,#999,#bbb);}
+.page-ctrl>a.disabled{background:linear-gradient(to bottom,#999,#bbb) !important;}
+.page-ctrl>a.active{background:linear-gradient(to bottom,#999,#bbb) !important;}
