--- a/video/web/css/index.css
+++ b/video/web/css/index.css
@@ -22,7 +22,7 @@
 .sec .info>.more .like{display:inline-flex;align-items:center;color:#f90;}
 .sec .info>.more .like img{width:14px;height:14px;margin-right:4px;}
 
-.page-ctrl{padding:6px 20px;text-align: right;background: #333;margin: 0 13px;}
+.page-ctrl{padding:6px 20px;text-align: right;background: #333;margin:0 5px;clear:both;}
 .page-ctrl>a{
     display: inline-block;
     padding: 6px 14px;
@@ -35,3 +35,7 @@
 .page-ctrl>a:hover{background: linear-gradient(to bottom,#999,#ddd);}
 .page-ctrl>a.disabled{background:linear-gradient(to bottom,#999,#bbb) !important;}
 .page-ctrl>a.active{background:linear-gradient(to bottom,#999,#bbb) !important;}
+
+.ad1{background-color:#000;width: 420px;height:592px;float: right;margin: 20px 0;border-radius:5px;padding:16px 10px;}
+.ad2{display:flex;margin:20px 0;height:270px;background:#222;padding:10px;border-radius: 5px;}
+.ad2>div{height:250px;border:1px solid #222;background:#000;}
