--- a/video/web/css/index.css
+++ b/video/web/css/index.css
@@ -37,5 +37,5 @@
 .page-ctrl>a.active{background:linear-gradient(to bottom,#999,#bbb) !important;}
 
 .ad1{background-color:#000;width: 420px;height:592px;float: right;margin: 20px 0;border-radius:5px;padding:16px 10px;}
-.ad2{display:flex;margin:20px 0;height:270px;background:#222;padding:10px;border-radius: 5px;}
+.ad2{display:flex;margin:20px 0;height:270px;background:#222;padding:10px;border-radius:5px;clear:both;}
 .ad2>div{height:250px;border:1px solid #222;background:#000;}
