--- a/video/web/css/index.css
+++ b/video/web/css/index.css
@@ -5,12 +5,13 @@
 .page.col2>.left{flex-grow:1;border:1px solid #cfcfcf;}
 .page.col2>.right{margin-left:20px;width:200px;border:1px solid #cfcfcf;}
 
-.sec{padding:0 10px !important;}
+.sec{padding:0 10px !important;clear:both;}
 .sec .head{height:30px;line-height:30px;font-size:18px;margin:0 10px -10px 10px;
     font-family:Arial,Helvetica,sans-serif;border-radius:5px;color:#f90;}
 .sec .row{display:flex;margin:20px 0;}
 .sec .row .col{width:200px;margin:0 5px;padding:7px;background:#333;border-radius:5px;}
 .sec .row .col:hover{background:#222;cursor:pointer;}
+.sec .col .col-link{display:none;}
 .sec .col .vpre{height:130px;}
 .sec .col .vpre .col-img{width:100%;height:100%;background-size:100% 100% !important;}
 .sec .col .info{}
