--- a/video/web/css/index.css
+++ b/video/web/css/index.css
@@ -9,9 +9,8 @@
 .sec .head{height:30px;line-height:30px;font-size:18px;margin:0 10px -10px 10px;
     font-family:Arial,Helvetica,sans-serif;border-radius:5px;color:#f90;}
 .sec .row{display:flex;margin:20px 0;}
-.sec .row .col{width:200px;margin:0 5px;padding:7px;background:#333;border-radius:5px;}
+.sec .row .col{display:block;width:200px;margin:0 5px;padding:7px;background:#333;border-radius:5px;color:#ddd !important;}
 .sec .row .col:hover{background:#222;cursor:pointer;}
-.sec .col .col-link{display:none;}
 .sec .col .vpre{height:130px;}
 .sec .col .vpre .col-img{width:100%;height:100%;background-size:100% 100% !important;}
 .sec .col .info{}
