--- a/common/common.css
+++ b/common/common.css
@@ -21,10 +21,10 @@ input[type=text],input[type=password],select{border-style:solid;border-width:1px
 input[type=checkbox]{vertical-align:middle;cursor:pointer;}
 ul{margin:0;padding:0;}
 
-.btn{outline:none;display:inline-block;cursor:pointer;font-weight:bold;color:#000;}
-.btn.btn1{border:none;padding:3px 13px;background:linear-gradient(to bottom,#ddd,#999);}
+.btn{outline:none;display:inline-block;cursor:pointer;font-weight:bold;color:#000;border:none;padding:3px 13px;}
+.btn.btn1{background:linear-gradient(to bottom,#ddd,#999);}
 .btn.btn1:not([disabled]):hover{background:linear-gradient(to bottom,#999,#ddd);}
-.btn.btn2{border:none;padding: 2px 10px;background:linear-gradient(to bottom,#f90,#c60);}
+.btn.btn2{background:linear-gradient(to bottom,#f90,#c60);}
 .btn.btn2:not([disabled]):hover{background: linear-gradient(to bottom,#c60,#f90);}
 .btn.btn-lg{padding:5px 20px;}
 
