--- a/video/web/videojs/video-js-custom.css
+++ b/video/web/videojs/video-js-custom.css
@@ -1,3 +1,4 @@
+.vjs-poster{outline:none !important;}
 .video-js{outline:none !important;}
 .video-js video{object-fit:fill;}
 .video-js .vjs-control-bar{
@@ -15,6 +16,7 @@
   font-size:26px !important;
 }
 .video-js .vjs-time-control{
+  width: auto !important;
   font-size:16px !important;
   line-height:36px !important;
   padding-left:0 !important;
@@ -42,17 +44,13 @@
   margin:1em auto !important;
   height:4em !important;
 }
-.vjs-slider-vertical .vjs-volume-level:before{
-  display:none;
-}
-
+.vjs-slider-vertical .vjs-volume-level:before{display:none;}
 .video-js .vjs-progress-control:hover .vjs-progress-holder {
    font-size: 1em !important;
 }
 .video-js .vjs-play-progress:before{
   font-size:0 !important;
 }
-
 .video-js .vjs-big-play-button {
   top: 50%;
   left: 50%;
@@ -60,8 +58,14 @@
   margin-left: -1.5em;
 }
 .video-js .vjs-remaining-time{display:none;}
-.video-js .vjs-mouse-display:after{display:none;}
 .video-js .vjs-play-progress:after{display:none;}
+.video-js .vjs-mouse-display:after{
+  top:-30px;
+  padding:0 10px;
+  height:24px;
+  line-height:24px;
+}
+
 /*barrage*/
 .barg-div{
   position:absolute;
